RESOLVED FIXED308509
WebContent process termination caused by invalid `NetworkConnectionToWebProcess_LoadImageForDecoding` message
https://bugs.webkit.org/show_bug.cgi?id=308509
Summary WebContent process termination caused by invalid `NetworkConnectionToWebProce...
Charlie Wolfe
Reported 2026-02-23 17:43:28 PST
...
Attachments
Charlie Wolfe
Comment 1 2026-02-23 17:43:29 PST
Charlie Wolfe
Comment 2 2026-02-23 17:45:42 PST
EWS
Comment 3 2026-02-23 22:39:08 PST
Committed 308105@main (6b81371ea4ff): <https://commits.webkit.org/308105@main> Reviewed commits have been landed. Closing PR #59284 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.