WebContent process termination caused by invalid `NetworkConnectionToWebProcess_LoadImageForDecoding` message https://bugs.webkit.org/show_bug.cgi?id=308509 rdar://171028333

Reviewed by Aditya Keerthi.

A client can call _loadAndDecodeImage: with an NSURLRequest whose URL is invalid. The invalid URL
survives IPC serialization and reaches NetworkConnectionToWebProcess::loadImageForDecoding, where
a MESSAGE_CHECK on url.isValid() fails and terminates the web process.

Check url.isValid() in WebPageProxy::loadAndDecodeImage and return a decodeError early, preventing
the invalid URL from being sent to the WCP.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/LoadAndDecodeImage.mm
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadAndDecodeImage):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/LoadAndDecodeImage.mm:
(TestWebKitAPI::TEST(WebKit, LoadAndDecodeImageInvalidURL)):

Canonical link: https://commits.webkit.org/308105@main